// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGrader defaults current page to 0 if userID is not in submissions 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader defaults current page to 0 without studentIndex 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader only sets submissions once 1`] = `
<Screen
  navBarHidden={true}
  navBarStyle="light"
  noRotationInVerticallyCompact={true}
  showDismissButton={true}
  statusBarHidden={true}
  statusBarStyle="default"
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <FlatList
      contentOffset={
        Object {
          "x": 0,
        }
      }
      data={
        Array [
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "submitted",
              "userID": "55",
            },
          },
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "submitted",
              "userID": "55",
            },
          },
        ]
      }
      disableVirtualization={false}
      getItemLayout={[Function]}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="handled"
      maxToRenderPerBatch={10}
      numColumns={1}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      pagingEnabled={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsHorizontalScrollIndicator={false}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": -10,
        }
      }
      updateCellsBatchingPeriod={50}
      windowSize={5}
    />
    <Tutorial
      tutorials={
        Array [
          Object {
            "id": "swipe-tutorial",
            "image": Object {
              "testUri": "../../../src/images/speedgrader/Swipe.png",
            },
            "text": "Swipe left or right to view other student submissions",
          },
        ]
      }
    />
  </View>
</Screen>
`;

exports[`SpeedGrader renders 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`SpeedGrader renders submissions if there are some 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentOffset={
        Object {
          "x": 0,
        }
      }
      data={
        Array [
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "submitted",
              "userID": "55",
            },
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      getItemLayout={[Function]}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="handled"
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsHorizontalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": -10,
        }
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={5}
    >
      <View>
        <View
          onLayout={undefined}
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <A11yGroup
            style={
              Array [
                Object {
                  "overflow": "hidden",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "height": 1334,
                  "width": 770,
                },
              ]
            }
          >
            <A11yGroup
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Header
                assignmentID="1"
                closeModal={[Function]}
                courseID="1"
                navigator={
                  Object {
                    "dismiss": [Function],
                    "dismissAllModals": [Function],
                    "isModal": false,
                    "launchExternalTool": [Function],
                    "pop": [Function],
                    "show": [Function],
                    "traitCollection": [Function],
                  }
                }
                submissionID={undefined}
                submissionProps={
                  Object {
                    "avatarURL": "http://www.fillmurray.com/100/100",
                    "grade": "B-",
                    "name": "Donald Trump",
                    "sectionID": "1",
                    "status": "submitted",
                    "userID": "55",
                  }
                }
                userID="55"
              />
              <SimilarityScore
                submissionID={undefined}
              />
              <View
                style={
                  Object {
                    "backgroundColor": "white",
                    "flex": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 200,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                          "textAlign": "center",
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    This assignment does not allow submissions.
                  </Text>
                </View>
              </View>
            </A11yGroup>
          </A11yGroup>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SpeedGrader renders with a filter 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <RCTScrollView
      contentOffset={
        Object {
          "x": 0,
        }
      }
      data={
        Array [
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "submitted",
              "userID": "55",
            },
          },
          Object {
            "key": "55",
            "submission": Object {
              "avatarURL": "http://www.fillmurray.com/100/100",
              "grade": "B-",
              "name": "Donald Trump",
              "sectionID": "1",
              "status": "missing",
              "userID": "55",
            },
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      getItemLayout={[Function]}
      horizontal={true}
      initialNumToRender={10}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="handled"
      maxToRenderPerBatch={10}
      numColumns={1}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      pagingEnabled={true}
      renderItem={[Function]}
      scrollEventThrottle={50}
      showsHorizontalScrollIndicator={false}
      stickyHeaderIndices={Array []}
      style={
        Object {
          "marginLeft": -10,
          "marginRight": -10,
        }
      }
      updateCellsBatchingPeriod={50}
      viewabilityConfigCallbackPairs={Array []}
      windowSize={5}
    >
      <View>
        <View
          onLayout={undefined}
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <A11yGroup
            style={
              Array [
                Object {
                  "overflow": "hidden",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "height": 1334,
                  "width": 770,
                },
              ]
            }
          >
            <A11yGroup
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Header
                assignmentID="1"
                closeModal={[Function]}
                courseID="1"
                navigator={
                  Object {
                    "dismiss": [Function],
                    "dismissAllModals": [Function],
                    "isModal": false,
                    "launchExternalTool": [Function],
                    "pop": [Function],
                    "show": [Function],
                    "traitCollection": [Function],
                  }
                }
                submissionID={undefined}
                submissionProps={
                  Object {
                    "avatarURL": "http://www.fillmurray.com/100/100",
                    "grade": "B-",
                    "name": "Donald Trump",
                    "sectionID": "1",
                    "status": "submitted",
                    "userID": "55",
                  }
                }
                userID="55"
              />
              <SimilarityScore
                submissionID={undefined}
              />
              <View
                style={
                  Object {
                    "backgroundColor": "white",
                    "flex": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 200,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                          "textAlign": "center",
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    This assignment does not allow submissions.
                  </Text>
                </View>
              </View>
            </A11yGroup>
          </A11yGroup>
        </View>
        <View
          onLayout={undefined}
          style={
            Array [
              Object {
                "flexDirection": "row",
              },
              null,
            ]
          }
        >
          <A11yGroup
            style={
              Array [
                Object {
                  "overflow": "hidden",
                  "paddingLeft": 10,
                  "paddingRight": 10,
                },
                Object {
                  "height": 1334,
                  "width": 770,
                },
              ]
            }
          >
            <A11yGroup
              onLayout={[Function]}
              style={
                Object {
                  "flex": 1,
                }
              }
            >
              <Header
                assignmentID="1"
                closeModal={[Function]}
                courseID="1"
                navigator={
                  Object {
                    "dismiss": [Function],
                    "dismissAllModals": [Function],
                    "isModal": false,
                    "launchExternalTool": [Function],
                    "pop": [Function],
                    "show": [Function],
                    "traitCollection": [Function],
                  }
                }
                submissionID={undefined}
                submissionProps={
                  Object {
                    "avatarURL": "http://www.fillmurray.com/100/100",
                    "grade": "B-",
                    "name": "Donald Trump",
                    "sectionID": "1",
                    "status": "missing",
                    "userID": "55",
                  }
                }
                userID="55"
              />
              <SimilarityScore
                submissionID={undefined}
              />
              <View
                style={
                  Object {
                    "backgroundColor": "white",
                    "flex": 1,
                    "paddingLeft": 16,
                    "paddingRight": 16,
                    "paddingTop": 16,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flex": 0,
                      "height": 200,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Array [
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                        Object {
                          "color": "#2D3B45",
                          "fontSize": 16,
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay-medium",
                          "textAlign": "center",
                        },
                        Object {
                          "fontFamily": ".SFUIDisplay",
                        },
                      ]
                    }
                  >
                    This assignment does not allow submissions.
                  </Text>
                </View>
              </View>
            </A11yGroup>
          </A11yGroup>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RCTSafeAreaView>
`;

exports[`SpeedGrader shows the loading spinner when pending and not refreshing 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`SpeedGrader shows the loading spinner when there are no submissions 1`] = `
<RCTSafeAreaView
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <ActivityIndicator
        animating={true}
        color="#999999"
        hidesWhenStopped={true}
        size="small"
      />
    </View>
  </View>
</RCTSafeAreaView>
`;
